Bug 567030 - Reduce UnsupportedEncodingException in the codebase
Handle discovery bundles.

Change-Id: Iaaed755b90c69140080b1b97061d59337f7d39d6
Signed-off-by: Alexander Kurtakov <akurtako@redhat.com>